# huffman-compression-library

./: .gitignore  CMakeLists.txt  Glossary.md  LICENSE  README.MD  README.md  _config.yml  a.out  fh.cpp  huffmantool.h  main.cpp  newfile_compressed.txt  newfile_original.txt
.github/workflows/: ccpp.yml
examples/: benchmark.cpp  cli_compression.cpp
sample/: newfile_compressed.txt
src/: cfp.h  scanner.h
tests/: CMakeLists.txt  tests.cpp
